[package]
name = "screen-framing"
description = "Screen capture."
keywords = ["screen", "capture", "record", "frame", "nonblocking"]
license = "MIT"
version = "0.3.0"
authors = ["Ram <quadrupleslap@gmail.com>"]
repository = "https://github.com/endogeny/screen-framing"
documentation = "https://docs.rs/screen-framing"

[dependencies]
framing = "0.6"
scrap = "0.3"

[dev-dependencies]
png-framing = "0.5"
